--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="/src/assets/images/chatbot-icon.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Digit AI</title>
+    <title>Deep Learning</title>
   </head>
   <body>
     <div id="root"></div>
